--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue": "^2.6.9",
     "vue-jest": "^3.0.4",
     "vue-template-compiler": "^2.6.10",
+    "vuetify": "^2.4.3",
     "vuex": "^3.1.1",
     "yarn": "^1.22.10"
   },
